2011-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el: Add Noda's blog.
	(shimbun-kantei-groups, shimbun-kantei-x-face-alist, shimbun-index-url)
	(shimbun-from-address, shimbun-make-contents): Update.

(2011-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-group-table): Add fuchisou group.

2011-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Add flash and science
	groups; remove culture, release, usatoday, and usatoday.ja groups.
	(shimbun-sankei-multi-next-url, shimbun-clear-contents): Remove
	usatoday stuff.

2011-08-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-kantei-x-face-alist): Add new face (commented).

2011-08-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el: Support KAN-FULL blog.
	(shimbun-kantei-groups): Add blog-en and blog-ja groups; remove
	m-magazine-(cn,en,ja,kr) groups.
	(shimbun-kantei-url, shimbun-kantei-x-face-alist, shimbun-index-url)
	(shimbun-from-address, shimbun-get-headers, shimbun-clear-contents):
	Update.

2011-07-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-get-headers): Update regexp matching articles
	in kodera group.
	(shimbun-clear-contents): Work for contents fetched from atmarkit.

2011-07-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-xml-parse-buffer): Use xml-parse-region if
	libxml-parse-xml-region fails for some reason.

2011-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-switch-to-buffer): Alias to w3m-switch-to-buffer.

	* nnshimbun.el (nnshimbun-generate-download-script): Use it.

2011-07-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-interactive-p): Alias to w3m-interactive-p.

	* sb-tech-on.el (shimbun-tech-on-login): Use it.

2011-06-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Update regexp for rss groups.

2011-04-21  David Engster  <dengste@eml.cc>
