@@ -1,3 +1,7 @@
+2011-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-kantei.el: Add the English version of Noda's blog.
+
 2011-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-kantei.el: Add Noda's blog.
